# dockspy

./: Cargo.toml  README.md
src/: container.rs  error_history.rs  lib.rs  main.rs
src/ratatui/: barchart.rs  table.rs
tests/: container.rs
