[package]
name = "dockspy"
version = "0.1.0"
edition = "2021"
default-run = "dockspy"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.30"
colored = "2.0"
crossterm = "0.27.0"
rand = "0.8.5"
ratatui = { version = "0.23.0", features = ["all-widgets"] }
tui = "0.19.0"


[[bin]]
name = "barchart"
path = "src/ratatui/barchart.rs"

[[bin]]
name = "sparkline"
path = "src/ratatui/sparkline.rs"

[[bin]]
name = "tabs"
path = "src/ratatui/tabs.rs"

[[bin]]
name = "table"
path = "src/ratatui/table.rs"


